[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbSDK"
version = "0.1.3"
description = "Async Python SDK for the ServiceBridge field service management API v4.5"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Wilkcom", email = "info@wilkcom.com" },
]
keywords = ["servicebridge", "field-service", "fsm", "api", "sdk", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aresponses>=3.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/wilkcom/sbSDK"
Repository = "https://github.com/wilkcom/sbSDK"
"Bug Tracker" = "https://github.com/wilkcom/sbSDK/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/servicebridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
